# econ-data

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  com.mikesimonsen.fed-expectations.plist  compare.py  config.yaml  export.py  fed_expectations.sh  fetch_expectations.py  fetch_fed_expectations.py  fly.toml  fly_run.sh  google_apps_script.js  import_mnd_history.py  import_nar_history.py  migrate_to_postgres.py  pyproject.toml  replicate_to_postgres.py  run.py  run.sh  run_calendar.py  run_intraday.py  schema.sql  summary.py  trigger-fly.sh  verify_parity.py
econ_data/: briefing.py  calc_affordability.py  calc_rolling.py  calc_spread.py  calculations.py  compare.py  config.py  daily_analysis.py  db.py  expectations.py  export.py  export_sheets.py  fed_expectations.py  fetch.py  fetch_altos.py  fetch_bls.py  fetch_confboard.py  fetch_mnd.py  fetch_nar.py  fetch_realtor.py  fetch_redfin.py  fetch_web.py  fetch_xactus.py  housing_analysis.py  pipeline.py  release_schedule.py  seasonal.py  store.py  store_sqlite.py  summary.py  verify_analysis.py
plans/: release-schedule.md
prompts/: daily_analysis.txt  housing_analysis.txt
sheets_data/: altos-inventory.csv  altos-new-listings.csv  altos-new-pending.csv  building-permits.csv  case-shiller.csv  construction-employment.csv  construction-spending.csv  consumer-confidence.csv  cpi-metro.csv  cpi.csv  existing-home-sales-nsa.csv  existing-home-sales.csv  fed-funds.csv  households.csv  housing-completions.csv  housing-starts.csv  housing-under-construction.csv  inflation-expectations.csv  jobless-claims.csv  (+22 more)
(+161 files in other folders)
